# ds-u2-actividad-1-listasenlazadassimples-Rodrigo2430570

./: CMakeLists.txt  README.md
arduino/IoTSerialSim/: IoTSerialSim.ino
src/: ListaGeneral.cpp  ListaGeneral.h  ListaSensor.h  SensorBase.h  SensorPresion.cpp  SensorPresion.h  SensorTemperatura.cpp  SensorTemperatura.h  SerialWin.cpp  SerialWin.h  main.cpp
